--- a/learning/package.json
+++ b/learning/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0"
+    "nuxt": "^2.4.0",
+    "vue-scrollto": "^2.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
