--- a/learning/package.json
+++ b/learning/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
-    "vue-scrollto": "^2.15.0"
+    "vue-scrollto": "^2.15.0",
+    "vue-select": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
