--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6"
+    "@nuxtjs/auth": "^4.8.1",
+    "@nuxtjs/axios": "^5.5.4"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
